--- a/flash.html
+++ b/flash.html
@@ -9,9 +9,8 @@
   <div id="content">
     <div class="content-wrap">
       <img src="./pic/bg.png" alt="" class="content-wrap-bg">
+      <img src="./pic/tiankong.png" class="content-sky"alt="">
     </div>
-    <div class="animals" id="dog"></div>
-    <div class="animals" id="cat"></div>
     <div class="animals" id="daxiang"></div>
   </div>
   <script type="text/javascript" src="./js/jquery-1.8.2.min.js"></script>
@@ -19,11 +18,11 @@
   <script type="text/javascript" src="./js/swipe.js"></script>
   <script type="text/javascript" src="./js/animals.js"></script>
   <script type="text/javascript">
-    // console.log($('.content-wrap-bg').width())
-    var swipe = Swipe($('#content'))
-    // console.log($('.content-wrap-bg').width())
-    swipe.scrollTo($('.content-wrap-bg').width() - $('#content').width(), 10000)
 
+    var swipe_bg = Swipe($('#content'), $('.content-wrap-bg'))
+    var swipe_sky = Swipe($('#content'), $('.content-sky'))
+    swipe_bg.scrollTo($('.content-wrap-bg').width() - $('#content').width(), 10000)
+    swipe_bg.scrollTo($('.content-sky').width() - $('#content').width(), 20000)
     //给动物注册开场动画,位置用百分比表示
     var showTime = 5000
     var lotteryTime = 5000
@@ -50,7 +49,7 @@
       'startTime': 0,
     }]
     // Animals(animals, showTime, lotteryTime)
-    // $('#dog').addClass('show')
+    $('#daxiang').addClass('daxiang')
     //两组动画 每个动物有开奖动画和退出动画
     //开奖动
   </script>
