20个动物分顺序

--- a/flash.html
+++ b/flash.html
@@ -68,12 +68,17 @@
           $('#'+item).addClass(item)
         }, time)
       }
+      // 先出场 大象 豹子 斑马 长颈鹿 凤凰 狗
       setTime('daxiang', 0)
       setTime('baozi', 0)
       setTime('banma', 0)
       setTime('changjinglu', 0)
       setTime('fenghuang', 0)
       setTime('dog', 0)
+      // 1s后出场 猴子 鸡 老虎 老鹰 龙 老鼠
+
+      // 2s后出场 牛 熊猫 猪 企鹅 狮子
+      // 3s后出场 蛇 兔子 羊
       //两组动画 每个动物有开奖动画和退出动画
       //开奖动
     }, 2000)
