--- a/flash.html
+++ b/flash.html
@@ -10,6 +10,7 @@
     <div class="content-wrap">
       <img src="./pic/bg.png" alt="" class="content-wrap-bg">
       <img src="./pic/sky.jpg" class="content-sky"alt="">
+      <img src="./pic/car.png" class="content-car" alt="">
     </div>
     <!-- 0s出场 -->
     <div class="animals" id="daxiang"></div>
@@ -41,44 +42,87 @@
   <script type="text/javascript" src="./js/swipe.sky.js"></script>
   <script type="text/javascript" src="./js/animals.js"></script>
   <script type="text/javascript">
-    //给动物注册开场动画,位置用百分比表示
-    // var showTime = 5000
-    // var lotteryTime = 5000
-    // var animals = [{
-    //   'name': '#dog',
-    //   'startX': 0.4,
-    //   'startY': 0.5,
-    //   'endX': 0.6,
-    //   'endY': 0.7,
-    //   'startTime': 1000,
-    // },{
-    //   'name': '#cat',
-    //   'startX': 0,
-    //   'startY': 0.5,
-    //   'endX': 0.8,
-    //   'endY': 0.7,
-    //   'startTime': 2000,
-    // },{
-    //   'name': '#fish',
-    //   'startX': 0,
-    //   'startY': 0.5,
-    //   'endX': 0.9,
-    //   'endY': 0.7,
-    //   'startTime': 0,
-    // }]
-    // Animals(animals, showTime, lotteryTime)
-    //开场动画固定每个动物分别写动画
-    // $('#daxiang').addClass('daxiang')
-    // $('#baozi').addClass('baozi')
-    // $('#banma').addClass('banma')
-    // $('#changjinglu').addClass('changjinglu')
-    // $('#fenghuang').addClass('fenghuang')
-    // $('#dog').addClass('dog')
+    //提前注册好开奖和退出动画
 
+    var animals = [{
+      'name': 'laoshu',
+      'index': 1
+    },{
+      'name': 'niu',
+      'index': 2
+    },{
+      'name': 'laohu',
+      'index': 3
+    },{
+      'name': 'tuzi',
+      'index': 4
+    },{
+      'name': 'she',
+      'index': 5
+    },{
+      'name': 'banma',
+      'index': 6
+    },{
+      'name': 'yang',
+      'index': 7
+    },{
+      'name': 'houzi',
+      'index': 8
+    },{
+      'name': 'ji',
+      'index': 9
+    },{
+      'name': 'dog',
+      'index': 10
+    },{
+      'name': 'pig',
+      'index': 11
+    },{
+      'name': 'qie',
+      'index': 12
+    },{
+      'name': 'daxiang',
+      'index': 13
+    },{
+      'name': 'changjinglu',
+      'index': 14
+    },{
+      'name': 'baozi',
+      'index': 15
+    },{
+      'name': 'panda',
+      'index': 16
+    },{
+      'name': 'laoying',
+      'index': 17
+    },{
+      'name': 'shizi',
+      'index': 18
+    },{
+      'name': 'long',
+      'index': 19
+    },{
+      'name': 'fenghuang',
+      'index': 20
+    }]
+    var result = [15, 10, 18, 17, 20, 16, 13, 12] //后期通过ajax异步获取
+    //7s后开始开奖
+    setTimeout(function(){
+      Animals(animals, result, 1000)
+    }, 7000)
+
+
+
+
+
+
+    //背景滚动部分代码
     var swipe_bg = SwipeSky($('#content'), $('.content-wrap-bg'))
     var swipe_sky = SwipeSky($('#content'), $('.content-sky'))
+
+    //开场动画部分代码
     var bgTimer = setTimeout(function() {
-      swipe_bg.scrollTo($('.content-wrap-bg').width() - $('#content').width(), 29000)
+      swipe_bg.scrollTo($('.content-wrap-bg').width() - $('#content').width(), 25000)
       swipe_sky.scrollTo($('.content-sky').width() - $('#content').width(), 34000)
       var setTime = function(item, time) {
         var timer = setTimeout(function() {
@@ -108,8 +152,6 @@
       setTime('qie', 2000)
       setTime('shizi', 2000)
       setTime('tuzi', 2000)
-      //两组动画 每个动物有开奖动画和退出动画
-      //开奖动
     }, 2000)
 
 
