--- a/flash.html
+++ b/flash.html
@@ -36,9 +36,9 @@
     <div class="animals" id="shizi"></div>
     <div class="animals" id="tuzi"></div>
   </div>
+  <div id="show" ></div>
   <script type="text/javascript" src="./js/jquery-1.8.2.min.js"></script>
   <script type="text/javascript" src="./js/jquery.transit.min.js"></script>
-  <script type="text/javascript" src="./js/swipe.js"></script>
   <script type="text/javascript" src="./js/swipe.sky.js"></script>
   <script type="text/javascript" src="./js/animals.js"></script>
   <script type="text/javascript">
@@ -110,11 +110,6 @@
     setTimeout(function(){
       Animals(animals, result, 1000)
     }, 7000)
-
-
-
-
-
 
     //背景滚动部分代码
     var swipe_bg = SwipeSky($('#content'), $('.content-wrap-bg'))
