--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <style>
+    .a {
+      width: 200px;
+      height: 200px;
+      position: absolute;
+      z-index: 3;
+      top: 0px;
+      right: 0px;
+      -moz-transform:scale(0.8);
+      -webkit-transform:scale(0.8);
+      -o-transform:scale(0.8);
+      transform: scale(0.8);
+    }
+  </style>
 </head>
 <body>
-  <img src="./pic/white.png" alt="">
+  <img src="./pic/animals/laoshu.gif" class="a" alt="">
   <img src="./pic/1.gif" alt="">
 </body>
 </html>
