flash除重影完成

--- a/flash.html
+++ b/flash.html
@@ -10,7 +10,9 @@
     <div class="content-wrap">
       <img src="./pic/bg.png" alt="" class="content-wrap-bg">
       <img src="./pic/sky.png" class="content-sky"alt="">
-      <img src="./pic/train.gif" class="content-car" alt="">
+      <div class="train-gif">
+        <img src="./pic/train.gif" class="content-car" alt="">
+      </div>
     </div>
     <!-- 0s出场 -->
     <div class="animals" id="daxiang"></div>
